--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,34 +6,45 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Upload Python Package
+name: Publish Python Package to PyPI and TestPyPI
 
-on:
-  release:
-    types: [published]
-
-permissions:
-  contents: read
+on: push
 
 jobs:
-  deploy:
-
+  build-n-publish:
+    name: Build and publish Python distribution to PyPI and TestPyPI
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v$
       with:
         python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build
-    - name: Build package
-      run: python -m build
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        
+    - name: Install pypa/build
+      run: >-
+        python3 -m
+        pip install
+        build
+          --user
+    - name: Build a binary wheel and source tarball
+      run: >-
+        python3 -m
+        build
+          --sdist
+          --wheel
+          --outdir dist/
+          .
+          
+    - name: Publish distributoin to TestPyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        user: __token__
+        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        repository-url: https://test.pypi.org/legacy/
+    
+    - name: Publish distribution to PyPI
+      if: startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
         password: ${{ secrets.MY_PYPI_TOKEN }}
