--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -8,7 +8,10 @@
 
 name: Publish Python Package to PyPI and TestPyPI
 
-on: push
+on: 
+  push:
+    branches:
+      - main
 
 jobs:
   build-n-publish:
@@ -23,20 +26,12 @@ jobs:
         python-version: '3.x'
         
     - name: Install pypa/build
-      run: >-
-        python3 -m
-        pip install
+      run: |
         pip install --upgrade pip
-        build
-          --user
+        pip install build
     - name: Build a binary wheel and source tarball
-      run: >-
-        python3 -m
-        build
-          --sdist
-          --wheel
-          --outdir dist/
-          . 
+      run: python3 -m build --sdist --wheel --outdir dist/ .
+      
     - name: Publish distributoin to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
