--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,6 +29,10 @@ jobs:
       run: |
         pip install --upgrade pip
         pip install build
+    
+    - name: Clean dist directory
+      run: rm -rf dist/*
+      
     - name: Build a binary wheel and source tarball
       run: python3 -m build --sdist --wheel --outdir dist/ .
       
