--- a/.github/workflows/python-publish_pypi.yml
+++ b/.github/workflows/python-publish_pypi.yml
@@ -9,9 +9,11 @@
 name: Publish Python Package to PyPI and TestPyPI
 
 on: 
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
+
+permissions:
+  contents: read
     
 jobs:
   build-n-publish:
